--- a/styles/main.css
+++ b/styles/main.css
@@ -6,3 +6,58 @@
   font-weight:400;
   font-style: normal;
 }
+/* shared style */
+.bg-color{
+  background-color: rgba(255, 144, 14, 0.1);
+}
+.dark-tow{
+  color: #424242;
+}
+.dark-three{
+  color: rgba(114, 114, 114, 1);
+}
+
+.display-flex{
+  display: flex;
+}
+.btn-primary{
+  background-color: rgba(255, 144, 14, 1);
+  color:  #ffff;
+  padding: 20px 25px;
+  border: none;
+  border-radius: 1.5rem;
+}
+
+/* nav related items */
+.nav-bar{
+  justify-content: space-between;
+}
+.nav-items{
+  list-style: none;
+  margin-left: 10px;
+}
+.nav-link{
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+}
+.nav-bar, .banner{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.banner-content{
+  text-align: center;
+  margin-bottom:20px ;
+  padding: 20px;
+}
+.banner-img{
+width: 100%;
+}
+.banner-title{
+  font-weight: 600;
+  font-size: 4rem;
+}
+.banner-des{
+  font-weight: 400;
+  font-size: 1rem;
+}
