--- a/styles/main.css
+++ b/styles/main.css
@@ -101,6 +101,45 @@ font-weight: 400;
 max-width: 542px;
 
 }
+/* feature related styles */
+.feauture{
+  gap: 140px;
+}
+.you-will{
+  border-left: 5px solid rgba(255, 144, 14, 1);
+  padding-left: 20px;
+}
+
+.feature-card-container, .feture-title{
+  font-weight: 600;
+  font-size: 1.25rem;
+ 
+  
+}
+.feture-title{
+ margin-top: 0px;
+  margin-bottom: 0px;
+}
+.feauture-cards{
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+#ex-batch{
+padding: 45px;
+margin-left: -100px;
+margin-top: -100px;
+}
+#ex-year{
+  font-weight: 700;
+  font-size: 4rem;
+  
+}
+#wx{
+ font-size: 1.4rem;
+ font-weight: 500;
+}
 /* some fact related style */
 .fact{
   border: 1px solid rgba(255, 144, 14, 1);
@@ -142,7 +181,8 @@ grid-template-columns: repeat(5, 1fr);
 
 
 @media screen and (max-width:576px) {
-  .nav-bar, .nav-links, .team{
+  .nav-bar, .nav-links, .team,
+  .feauture{
     flex-direction: column;
     /* text-align: center;
     gap: 20px; */
@@ -164,6 +204,14 @@ grid-template-columns: repeat(5, 1fr);
   }
   .sp-compeney{
     gap: 20px;
+  }
+  .sister-img img{
+    width: 100%;
+  }
+  #ex-batch{
+    /* display: none; */
+    margin-top: 20px;
+    margin-left: 20px;
   }
 }
 
